kubernetes/apps/default/worksphere/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: worksphere
  namespace: default
spec:

  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
