kubernetes/apps/default/worksphere/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: worksphere
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: worksphere
  oidc:
    provider:
      issuer: "https://github.com"
      authorizationEndpoint: "https://github.com/login/oauth/authorize"
      tokenEndpoint: "https://github.com/login/oauth/access_token"
    clientIDRef:
      name: github-fleet-auth-secret
    clientSecret:
      name: github-fleet-auth-secret
    redirectURL: "https://worksphere.unscfleet.com/oauth2/callback"
    logoutPath: "/logout"
